feat: 세션을 활용한 현재 사용자 정보 조회 기능 추가